Fix a small layout glitch on the right column
Fixing #1838 made a layout glitch apparent: the #content div is slightly
off to the right and overlaps the right column by about 4 pixels. This
is caused by the div's padding.

Remove the div's left padding in order to bring it back into the white
background.

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -51,7 +51,7 @@
 #sidebar hr{ width: 100%; margin: 0 auto; height: 1px; background: #ccc; border: 0; }
 * html #sidebar hr{ width: 95%; position: relative; left: -6px; color: #ccc; }
 
-#content { width: 80%; background-color: #fff; margin: 0px; border-right: 1px solid #ddd; padding: 6px 10px 10px 10px; z-index: 10; }
+#content { width: 80%; background-color: #fff; margin: 0px; border-right: 1px solid #ddd; padding: 6px 0 10px 10px; z-index: 10; }
 * html #content{ width: 80%; padding-left: 0; margin-top: 0px; padding: 6px 10px 10px 10px;}
 html>body #content { min-height: 600px; } 
 * html body #content { height: 600px; } /* IE */
